Start cleanup of grabbing and parsing medrxiv and minor updates to paper

--- a/outputs/paper/paper.Rmd
+++ b/outputs/paper/paper.Rmd
@@ -1,8 +1,8 @@
 ---
 title: "Reproducibility of COVID-19 research papers on bioRxiv and medRxiv"
 subtitle: "TBD"
-author: "Annie Collins, University of Toronto"
-thanks: "Code and data are available at: https://github.com/anniecollins/reproducibility."
+author: "Annie Collins^[University of Toronto.]"
+thanks: "We thank CANSSI... Code and data are available at: https://github.com/anniecollins/reproducibility."
 date: "`r format(Sys.time(), '%d %B %Y')`"
 abstract: "We create a dataset of all the papers published on bioRxiv and medRxiv between X and Y. We extract the text from these papers and parse them for keywords to do with the availability of data and scripts underpinning the paper. We find that X per cent of papers have X. Our paper demonstrates the need for Y."
 output:
@@ -19,11 +19,11 @@ library(tidyverse)
 
 # Introduction
 
-...
+Scientists use open repositories of papers to more quickly disseminate their research than is possible in traditional journals. These repositories, such as arxiv, bioRxiv, and medRxiv, are a critical component of science and many results build on the work published there. So it is important that the results that are published are credible. These repositories are not peer-reviewed, and, in general, anyone with appropriate academic credentials can submit a paper. 
 
+While neither peer-review nor credentials are a panacea nor a guarantee of quality, given the importance of these repositories, it is important that scientists impose on themselves various standards for their results. Following @weissgerber2021automated we examine papers about COVID-19 published to bioRxiv and medRxiv during 2020. We search for markers of open science and reproducibility, such as X, Y, and Z. 
 
-We follow @weissgerber2021automated...
-
+We find that A, B, and C.
 
 The remainder of this paper is structured as follows...
 
