--- a/outputs/paper/references.bib
+++ b/outputs/paper/references.bib
@@ -1,3 +1,27 @@
+
+@Article{citemedrxivr,
+    title = {medrxivr: Accessing and searching medRxiv and bioRxiv preprint data in R},
+    author = {Luke A. McGuinness and Lena Schmidt},
+    journal = {Journal of Open Source Software},
+    year = {2020},
+    volume = {5},
+    number = {54},
+    pages = {2651},
+    doi = {10.21105/joss.02651},
+    url = {https://doi.org/10.21105/joss.02651},
+  }
+
+@Article{citetidyverse,
+    title = {Welcome to the {tidyverse}},
+    author = {Hadley Wickham and Mara Averick and Jennifer Bryan and Winston Chang and Lucy D'Agostino McGowan and Romain François and Garrett Grolemund and Alex Hayes and Lionel Henry and Jim Hester and Max Kuhn and Thomas Lin Pedersen and Evan Miller and Stephan Milton Bache and Kirill Müller and Jeroen Ooms and David Robinson and Dana Paige Seidel and Vitalie Spinu and Kohske Takahashi and Davis Vaughan and Claus Wilke and Kara Woo and Hiroaki Yutani},
+    year = {2019},
+    journal = {Journal of Open Source Software},
+    volume = {4},
+    number = {43},
+    pages = {1686},
+    doi = {10.21105/joss.01686},
+  }
+
 @Manual{citeR,
     title = {R: A Language and Environment for Statistical Computing},
     author = {{R Core Team}},
@@ -6,8 +30,7 @@
     year = {2020},
     url = {https://www.R-project.org/},
   }
-  
-  
+
 @article{weissgerber2021automated,
   title={Automated screening of COVID-19 preprints: can we help authors to improve transparency and reproducibility?},
   author={Weissgerber, Tracey and Riedel, Nico and Kilicoglu, Halil and Labb{\'e}, Cyril and Eckmann, Peter and Ter Riet, Gerben and Byrne, Jennifer and Cabanac, Guillaume and Capes-Davis, Amanda and Favier, Bertrand and others},
@@ -18,4 +41,6 @@
   year={2021},
   publisher={Nature Publishing Group}
 }
+
+
 
