Add saved version of the checked dataset so dont have to run each time. Minor updates to paper.

--- a/outputs/paper/paper.Rmd
+++ b/outputs/paper/paper.Rmd
@@ -28,9 +28,22 @@ We find that A, B, and C.
 The remainder of this paper is structured as follows...
 
 
+
+
 # Data
 
 We construct our dataset by first using the APIs of bioRxiv and medRxiv to download any paper that: 
+
+
+We then convert these PDFs to text files using X.
+
+Finally, we search for keywords in certain combinations using @citePDDPub.
+
+Summary table
+
+Graphs
+
+
 
 
 
