--- a/outputs/paper/references.bib
+++ b/outputs/paper/references.bib
@@ -1,4 +1,17 @@
 
+@Article{citePDDPub,
+    title = {ODDPub – a Text-Mining Algorithm to Detect Data Sharing in Biomedical Publications},
+    author = {Nico Riedel and Miriam Kip and Evgeny Bobrov},
+    journal = {Data Science Journal},
+    year = {2020},
+    volume = {19},
+    number = {1},
+    pages = {42},
+    doi = {http://doi.org/10.5334/dsj-2020-042},
+  }
+
+
+
 @Article{citemedrxivr,
     title = {medrxivr: Accessing and searching medRxiv and bioRxiv preprint data in R},
     author = {Luke A. McGuinness and Lena Schmidt},
