Add more plots, messy updates to plot script and paper

--- a/outputs/paper/paper.Rmd
+++ b/outputs/paper/paper.Rmd
@@ -50,14 +50,15 @@ Our final data set was formed by joining these two tables together via DOI to fo
 med_open_data_results <- read_csv(here("outputs/data/med_open_data_results.csv"))
 med_open_data_results %>% 
                     count(is_open_data, is_open_code) %>%
-                    kable(col.names = c("Contains Open Data Markers", "Contains Open Code Markers", "Count"))
+                    mutate(prop_total = n/1200) %>%
+                    kable(col.names = c("Contains Open Data Markers", "Contains Open Code Markers", "Count", "Porportion of Total"))
 ```
 
 ```{r open-data-published-summary}
 med_open_data_results %>% 
   group_by(published) %>% count(is_open_data) %>% 
   pivot_wider(names_from = is_open_data, values_from = n) %>%
-  rename("Open Data Markers" = `TRUE`, "No Open Data Markers" = `FALSE`) %>%
+  rename("Open Data Markers" = `1`, "No Open Data Markers" = `0`) %>%
   kable()
 ```
 
@@ -71,20 +72,54 @@ med_open_data_results %>%
 
 
 ```{r monthly-papers-total}
+# Number of COVID-related papers posted each month in total
 include_graphics(here("outputs/figures/papers_posted_total.pdf"))
 ```
 
-```{r monthly-papers-sample}
-include_graphics(here("outputs/figures/papers_posted_sample.pdf"))
+```{r monthly-papers-by-condition}
+# Number of papers posted each month from the sample
+# include_graphics(here("outputs/figures/papers_posted_sample.pdf"))
+# Likely don't need this anymore, see monthly-papers-sample-2
 ```
 
-```{r}
+```{r proportion-of-open-data}
+# Proportion of papers posted with open data or open code each month
 include_graphics(here("outputs/figures/prop_open_per_month.pdf"))
 ```
 
+```{r monthly-papers-by-condition}
+# Number of papers for each open data/code status per month
+include_graphics(here("outputs/figures/stack_conditions_plot.pdf"))
+```
+- Proportion of open data/code has fluctuated over time but shows no consistent overall increase or decrease over the course of the pandemic
+- Proportion of open data seems to be relatively unimpacted by the number of papers posted to medRxiv in any given month
+- Open code dipped in summer months when posting rate to medRxiv was high, bit questionable
+- Open code follows similar patterns of increase/decrease as data but ultimately is less prevelant in the repository
+
+# Publication
+```{r}
+med_open_data_results %>% 
+  group_by(published) %>% count(is_open_data) %>% 
+  pivot_wider(names_from = is_open_data, values_from = n) %>%
+  rename("Open Data Markers" = `1`, "No Data Code Markers" = `0`) %>% kable()
+```
+
+```{r}
+med_open_data_results %>% 
+  group_by(published) %>% count(is_open_code) %>% 
+  pivot_wider(names_from = is_open_code, values_from = n) %>%
+  rename("No Open Code Markers" = `0`, "Open Code Markers" = `1`) %>% kable()
+```
 
 
-
+# Type of Paper
+```{r}
+# Number of open data/code papers by keyword for different types
+include_graphics(here("outputs/figures/paper_type_keywords_plot.pdf"))
+```
+- Once data is restricted to certain types of papers - those including modeling, simulation, or machine learning - the availability of open data and code becomes much higher than the data set overall
+- Relatively small sample size, but still important to note?
+- Also an expected result
 
 
 
@@ -111,22 +146,29 @@ In this analysis we distinguish between *posting* (the event that a pre-print is
 
 There are many factors that impact the ability of an author to post make their data available
 
-## First discussion point - Time
-- How has open data/code shifted over the course of the pandemic?
-- How has open data/code changed with publication rate?
+## Open Data/Code in broader context
+- Discussion on open data/code in general and in life/medical sciences
+- Are these a good indicator of reproducibility? How much do these contribute to reproducibility?
 
+## First discussion point - Time
+- Important to note that time plays a role in geographic focus in this context - early cases/research in China, then east and Southeast Asia, differences in different local data practices/policies
+- On one hand good that there did not appear to be a drop in proportion of papers with open data/code as posting rates have risen, but also interesting to note that there has not been an overall increase
+- 
 
 ## Second discussion point - Eventual Publication
 - See weaknesses
 
 ## Third discussion point - Type of Paper
-- A significantly higher proportion if
+- Public health modeling/simulation papers more important near beginning of pandemic when less was understood about COVID as a disease specifically
+- Perhaps contributed to the fact that the rate of open data/code from beginning of pandemic has been consistent throughout despite what we would hope is an increase in availability of COVID-19-related data?
+
 
 ## Weaknesses and next steps
 
 - No open data/code was verified manually, all dependent on algorithm
 - Publication info has high rate of false negatives (i.e. medRxiv data seems to miss a lot of papers that go on to be published)
 - Want to look at geographic distribution and prevalence of open data/code - influence on open data policies and timing throughout pandemic
+- Extend research to other indicators of reproducibility
 
 
 \newpage
