Add abstract and update paper content and tables

--- a/outputs/paper/references.bib
+++ b/outputs/paper/references.bib
@@ -1,3 +1,12 @@
+@Manual{citeODDPubpackage,
+    title = {oddpub: Detection of Open Data & Open Code statements in biomedical
+publications},
+    author = {Nico Riedel},
+    year = {2019},
+    note = {R package version 5.0},
+    url = {https://github.com/quest-bih/oddpub},
+  }
+
 
 @Article{citePDDPub,
     title = {ODDPub – a Text-Mining Algorithm to Detect Data Sharing in Biomedical Publications},
