--- a/outputs/paper/paper.Rmd
+++ b/outputs/paper/paper.Rmd
@@ -1,10 +1,10 @@
 ---
-title: "Reproducibility of COVID-19 research papers on medRxiv"
-subtitle: "TBD"
+title: "Reproducibility of COVID-19 pre-prints on medRxiv"
+subtitle: "Markers of open code or data not identified in 81 per cent of pre-prints"
 author: "Annie Collins^[University of Toronto.]"
-thanks: "We thank CANSSI... Code and data are available at: https://github.com/anniecollins/reproducibility."
+thanks: "Paper presented at Toronto Workshop on Reproducibility, 26 Februrary 2021. Collins thanks CANSSI Ontario for financial support. Code and data are available at: https://github.com/anniecollins/reproducibility."
 date: "`r format(Sys.time(), '%d %B %Y')`"
-abstract: "We create a dataset of all the papers published on bioRxiv and medRxiv between X and Y. We extract the text from these papers and parse them for keywords to do with the availability of data and scripts underpinning the paper. We find that X per cent of papers have X. Our paper demonstrates the need for Y."
+abstract: "We create a dataset of all the pre-prints published on medRxiv between between 28 January 2020 and 31 January 2021. We extract the text from these pre-prints and parse them looking for for keyword markers signalling the availability of the data and code underpinning the pre-print. We are unable to find markers of either open data or open code for 81 per cent of the pre-prints in our sample. Our paper demonstrates the need to have authors categorize the degree of openness of their pre-print as part of the medRxiv submissions process, and more broadly, the need to better integrate open science training into a wide range of fields."
 output:
   bookdown::pdf_document2:
 toc: FALSE
@@ -12,14 +12,21 @@ bibliography: references.bib
 ---
 
 ```{r setup, include=FALSE}
-library(tidyverse)
-library(lubridate)
-library(knitr)
-library(here)
-
 knitr::opts_chunk$set(echo = FALSE, error = FALSE, message = FALSE, warning = FALSE)
-
 ```
+
+```{r loadpackages, include=FALSE}
+library(here)
+library(knitr)
+library(lubridate)
+library(tidyverse)
+```
+
+
+```{r loaddata, include=FALSE}
+med_open_data_results <- read_csv(here("outputs/data/med_open_data_results.csv"))
+```
+
 
 # Introduction
 
@@ -36,44 +43,68 @@ The remainder of this paper is structured as follows...
 
 # Data & Methodology
 
-Our primary data set consists of information extracted from the medRxiv repository combined with output from running a sample of COVID-19-related pre-prints through the Open Data Detection in Publications (ODDPub) text mining algorithm. 
+Our primary data set consists of information extracted from the medRxiv repository combined with output from running a sample of COVID-19-related pre-prints through the Open Data Detection in Publications (ODDPub) text mining algorithm [@citePDDPub], using the `oddpub` package [@citeODDPubpackage]. 
 
 We constructed this data set by first creating a local copy of the medRxiv repository via the medRxiv API and then filtering for papers related to the COVID-19 pandemic through several keyword searches to create our sampling frame (n = 9,929, including only the most recent version of any given pre-print). This data includes the following variables for each pre-print in the repository: title, abstract, author(s), date posted, research field, DOI, version number, corresponding author, corresponding author's institutional affiliation, and published DOI (if the paper has since been published in a peer reviewed journal). 
 
-We then selected a random sample of these papers (n = 1,200) to check for open data and code markers using the ODDPub algorithm. This required downloading each paper as a PDF, converting the PDFs to text files, and conducting the open data and code detecting procedure to produce a results table indicating the presence of open data or open code markers in each paper (with a value of TRUE or FALSE for each marker and the relevant open data or open code statements when applicable).
+We then selected a random sample of these papers (n = 1,200) to check for open data and code markers using the ODDPub algorithm. This required downloading each paper as a PDF, converting the PDFs to text files, and conducting the open data and code detecting procedure to produce a results table indicating the presence of open data or open code markers in each paper (with a value of TRUE or FALSE for each marker and the relevant open data or open code statements when applicable). These PDFs were downloaded and converted to txt files using the `medrxivr` package [@citemedrxivr].
 
-Our final data set was formed by joining these two tables together via DOI to form a data set including all original, qualitative information for each pre-print alongside its open data and open code status and markers.
+Our final data set was formed by joining these two tables together via DOI to form a data set including all original, qualitative information for each pre-print alongside its open data and open code status and markers. Broadly, we are unable to find markers of either open data or open code for around 81 per cent of pre-prints (Table \@ref(tab:summarycounts)).
 
-# Sample Summaries
-```{r summary-table}
+```{r summarycounts}
 # open data/open code count summary table
-med_open_data_results <- read_csv(here("outputs/data/med_open_data_results.csv"))
 med_open_data_results %>% 
-                    count(is_open_data, is_open_code) %>%
-                    mutate(prop_total = n/1200) %>%
-                    kable(col.names = c("Contains Open Data Markers", "Contains Open Code Markers", "Count", "Porportion of Total"))
+  count(is_open_data, is_open_code) %>%
+  mutate(prop_total = n / sum(n)) %>%
+  mutate(is_open_data = ifelse(is_open_data == 0, "No", "Yes"),
+         is_open_code = ifelse(is_open_code == 0, "No", "Yes")) %>% 
+  kable(col.names = c("Contains Open Data Markers", "Contains Open Code Markers", "Count", "Proportion of Total"),
+        caption = "Counts and proportions of open data and code markers in our sample",
+        booktabs = TRUE,
+        digits = 2)
 ```
+
+We do not see a substantial difference in the presence of markers of open data or code between whether a pre-print ended up being published. There was a low number of papers that had markers of either open data or code in both those that were published and those that were not published (Tables \@ref(tab:open-data-published-summary) and \@ref(tab:open-code-published-summary)). It is important to note here that our dataset imperfectly characterises publication. In particular, it does not have the publication details for some papers that were published. And even if it were a perfect record, there is a publication lag that may skew the results.
 
 ```{r open-data-published-summary}
 med_open_data_results %>% 
-  group_by(published) %>% count(is_open_data) %>% 
+  group_by(published) %>% 
+  count(is_open_data) %>% 
   pivot_wider(names_from = is_open_data, values_from = n) %>%
-  rename("Open Data Markers" = `1`, "No Open Data Markers" = `0`) %>%
-  kable()
+  mutate(published = ifelse(published == 0, "No", "Yes")) %>%
+  rename("Open Data Markers" = `1`, 
+         "No Open Data Markers" = `0`,
+         Published = published) %>%
+  kable(caption = "Counts and proportions of open data markers by whether the pre-print was published",
+        booktabs = TRUE)
 ```
 
 ```{r open-code-published-summary}
 med_open_data_results %>% 
   group_by(published) %>% count(is_open_code) %>% 
   pivot_wider(names_from = is_open_code, values_from = n) %>%
-  rename("No Open Code Markers" = `0`, "Open Code Markers" = `1`) %>%
-  kable()
+  rename("No Open Code Markers" = `0`, 
+         "Open Code Markers" = `1`,
+         Published = published) %>%
+  kable(caption = "Counts and proportions of open code markers by whether the pre-print was published",
+        booktabs = TRUE) 
 ```
 
+The number of pre-prints posted by month reached its maximum in May 2020, and has remained reasonably steady at around 750 per month since around August 2020 (Figure \@ref(fig:monthly-papers-total)).
 
-```{r monthly-papers-total}
+```{r monthly-papers-total, fig.cap = "Number of pre-prints related to COVID-19 posted to medRxiv"}
 # Number of COVID-related papers posted each month in total
-include_graphics(here("outputs/figures/papers_posted_total.pdf"))
+med_results <- read_csv(here::here("outputs/data/med_results.csv")) # All COVID medRxiv papers (9,929)
+
+med_results %>% 
+  group_by(month = floor_date(date, "month")) %>% 
+  summarise(count=n()) %>% 
+  ggplot(aes(month, count)) + 
+  # geom_line(stat="identity") +
+  geom_col() + 
+  labs(x = "Month",
+       y = "Number of pre-prints") +
+  theme_minimal()
 ```
 
 ```{r monthly-papers-by-condition}
@@ -87,7 +118,7 @@ include_graphics(here("outputs/figures/papers_posted_total.pdf"))
 include_graphics(here("outputs/figures/prop_open_per_month.pdf"))
 ```
 
-```{r monthly-papers-by-condition}
+```{r monthly-papers-by-condition-stack}
 # Number of papers for each open data/code status per month
 include_graphics(here("outputs/figures/stack_conditions_plot.pdf"))
 ```
@@ -97,6 +128,9 @@ include_graphics(here("outputs/figures/stack_conditions_plot.pdf"))
 - Open code follows similar patterns of increase/decrease as data but ultimately is less prevelant in the repository
 
 # Publication
+
+
+
 ```{r}
 med_open_data_results %>% 
   group_by(published) %>% count(is_open_data) %>% 
@@ -113,10 +147,12 @@ med_open_data_results %>%
 
 
 # Type of Paper
+
 ```{r}
 # Number of open data/code papers by keyword for different types
 include_graphics(here("outputs/figures/paper_type_keywords_plot.pdf"))
 ```
+
 - Once data is restricted to certain types of papers - those including modeling, simulation, or machine learning - the availability of open data and code becomes much higher than the data set overall
 - Relatively small sample size, but still important to note?
 - Also an expected result
